Support binding RGW to multiple interfaces
Allow a single RGW instance to be configured to bind to multiple
interfaces. The "rgw_address" variable can either be an IP address as a
string or a list of IP addresses.

Signed-off-by: Gaudenz Steinlin <gaudenz.steinlin@cloudscale.ch>

--- a/roles/ceph-config/templates/ceph.conf.j2
+++ b/roles/ceph-config/templates/ceph.conf.j2
@@ -106,12 +106,16 @@ osd memory target = {{ _osd_memory_target | default(osd_memory_target) }}
 host = {{ _rgw_hostname }}
 keyring = /var/lib/ceph/radosgw/{{ cluster }}-rgw.{{ _rgw_hostname + '.' + instance['instance_name'] }}/keyring
 log file = /var/log/ceph/{{ cluster }}-rgw-{{ hostvars[inventory_hostname]['ansible_facts']['hostname'] + '.' + instance['instance_name'] }}.log
-{% set _rgw_binding_socket = instance['radosgw_address'] | default(_radosgw_address) | string + ':' + instance['radosgw_frontend_port'] | default(radosgw_frontend_port) | string %}
+{% set _rgw_binding_address = instance['radosgw_address'] | default(_radosgw_address) %}
+{% set _rgw_binding_socket = [] %}
+{% for addr in _rgw_binding_address %}
+{% set _ = _rgw_binding_socket.append(addr | string + ':' + instance['radosgw_frontend_port'] | default(radosgw_frontend_port) | string) %}
+{% endfor %}
 {%- macro frontend_line(frontend_type) -%}
 {%- if frontend_type == 'civetweb' -%}
-{{ radosgw_frontend_type }} port={{ _rgw_binding_socket }}{{ 's ssl_certificate='+radosgw_frontend_ssl_certificate if radosgw_frontend_ssl_certificate else '' }}
+{{ frontend_type }} port={% for socket in _rgw_binding_socket %}{{ socket }}{{ 's' if radosgw_frontend_ssl_certificate else '' }}{{ '+' if not loop.last else '' }}{% endfor %}{{ ' ssl_certificate='+radosgw_frontend_ssl_certificate if radosgw_frontend_ssl_certificate else '' }}
 {%- elif frontend_type == 'beast' -%}
-{{ radosgw_frontend_type }} {{ 'ssl_' if radosgw_frontend_ssl_certificate else '' }}endpoint={{ _rgw_binding_socket }}{{ ' ssl_certificate='+radosgw_frontend_ssl_certificate if radosgw_frontend_ssl_certificate else '' }}
+{{ frontend_type }} {% for socket in _rgw_binding_socket %}{{ 'ssl_' if radosgw_frontend_ssl_certificate else '' }}endpoint={{ socket }} {% endfor %}{{ 'ssl_certificate='+radosgw_frontend_ssl_certificate if radosgw_frontend_ssl_certificate else '' }}
 {%- endif -%}
 {%- endmacro -%}
 rgw frontends = {{ frontend_line(radosgw_frontend_type) }} {{ radosgw_frontend_options }}
