osd: support adding osd in auto discovery scenario
The task in charge of activating new osd is skipped because
`devices` is populated with the devices being added only.
It means it doesn't enter the condition since the length of `devices` is less
than the number of activated osds.

Closes: https://bugzilla.redhat.com/show_bug.cgi?id=1906293

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/roles/ceph-osd/templates/ceph-osd-run.sh.j2
+++ b/roles/ceph-osd/templates/ceph-osd-run.sh.j2
@@ -114,7 +114,7 @@ numactl \
   {% endif -%}
   -v /dev:/dev \
   -v /etc/localtime:/etc/localtime:ro \
-  -v /var/lib/ceph:/var/lib/ceph:z \
+  -v /var/lib/ceph:/var/lib/ceph:z,rshared \
   -v /etc/ceph:/etc/ceph:z \
   -v /var/run/ceph:/var/run/ceph:z \
   -v /var/run/udev/:/var/run/udev/ \
