Add option to configure container --memory-swappiness for OSDs
Add new variable ceph_osd_docker_memory_swappiness which is
undefined by default. If ceph_osd_docker_memory_swappiness
is defined, OSD service is started with --memory-swappiness
set to the value in this variable.

Closes: https://bugzilla.redhat.com/show_bug.cgi?id=1925555
Signed-off-by: John Fulton <fulton@redhat.com>

--- a/roles/ceph-osd/templates/ceph-osd.service.j2
+++ b/roles/ceph-osd/templates/ceph-osd.service.j2
@@ -41,6 +41,9 @@ numactl \
   {% if ceph_osd_docker_cpuset_mems is defined -%}
   --cpuset-mems='{{ ceph_osd_docker_cpuset_mems }}' \
   {% endif -%}
+  {% if ceph_osd_docker_memory_swappiness is defined -%}
+  --memory-swappiness='{{ ceph_osd_docker_memory_swappiness }}' \
+  {% endif -%}
   -v /dev:/dev \
   -v /etc/localtime:/etc/localtime:ro \
   -v /var/lib/ceph:/var/lib/ceph:z \
