Set idmap config for Ceph-NFS
Currently NFS Ganesha (ceph-nfs) consumes /etc/idmapd.conf, which
controls mapping of user/owner identities under NFSv4+.  With
containerized service deployment, this file is an immutable part of the
container image and cannot be modified.

Here we provide group variables, and a taskk and templates for the
ceph-nfs role, to set the path of the idmap configuration file and
to make the most common adjustment to the contents of that file --
namely to set the 'Domain'.  We default the path to /etc/ganesha/idmap.conf
so that we will not conflict with /etc/idmapd.conf on the controller nodes
where ganesha runs.  NFSv4 clients, as used for example by the Cinder NFS
driver, consume /etc/idmapd.conf and may require different settings than
what is wanted for NFS Ganesha.  Additionally, because we already bind
/etc/ganesha from the host into the ceph-nfs container, the file NFS
Ganesha consumes will no longer be an immutable part of the container.

Signed-off-by: Tom Barron <tpb@dyncloud.net>

--- a/roles/ceph-nfs/templates/ganesha.conf.j2
+++ b/roles/ceph-nfs/templates/ganesha.conf.j2
@@ -34,7 +34,9 @@ RADOS_URLS {
 
 NFSv4 {
 	RecoveryBackend = 'rados_kv';
+        IdmapConf = "{{ ceph_nfs_idmap_conf }}";
 }
+
 RADOS_KV {
 	ceph_conf = '/etc/ceph/{{ cluster }}.conf';
 	userid = "{{ ceph_nfs_ceph_user }}";
