dashboard: rename grafana_addr* variables
for consistency concern. Since we renamed the "grafana-server" group to
"monitoring" it makes sense to rename those variables accordingly.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/roles/ceph-prometheus/templates/prometheus.yml.j2
+++ b/roles/ceph-prometheus/templates/prometheus.yml.j2
@@ -44,4 +44,4 @@ alerting:
   alertmanagers:
   - scheme: http
     static_configs:
-    - targets: ['{{ grafana_server_addr }}:{{ alertmanager_port }}']
+    - targets: ['{{ monitoring_server_addr }}:{{ alertmanager_port }}']
