--- a/roles/ceph-grafana/templates/grafana.ini.j2
+++ b/roles/ceph-grafana/templates/grafana.ini.j2
@@ -21,7 +21,7 @@ cert_key = /etc/grafana/ceph-dashboard.key
 domain = {{ ansible_facts['fqdn'] }}
 protocol = {{ dashboard_protocol }}
 http_port = {{ grafana_port }}
-http_addr = {{ grafana_server_addr }}
+http_addr = {{ monitoring_server_addr }}
 
 [security]
 admin_user = {{ grafana_admin_user }}
