--- a/roles/ceph-prometheus/templates/alertmanager.service.j2
+++ b/roles/ceph-prometheus/templates/alertmanager.service.j2
@@ -30,13 +30,13 @@ ExecStart=/usr/bin/{{ container_binary }} run --rm --name=alertmanager \
   --memory-swap={{ alertmanager_container_memory * 2 }}GB \
   {{ alertmanager_container_image }} \
   --config.file=/etc/alertmanager/alertmanager.yml \
-  --cluster.listen-address={{ grafana_server_addr }}:{{ alertmanager_cluster_port }} \
-{% for peer in grafana_server_addrs|difference(grafana_server_addr) %}
+  --cluster.listen-address={{ monitoring_server_addr }}:{{ alertmanager_cluster_port }} \
+{% for peer in monitoring_server_addrs|difference(monitoring_server_addr) %}
   --cluster.peer={{ peer }}:{{ alertmanager_cluster_port }} \
 {% endfor %}
   --storage.path=/alertmanager \
   --web.external-url=http://{{ ansible_facts['fqdn'] }}:{{ alertmanager_port }}/ \
-  --web.listen-address={{ grafana_server_addr }}:{{ alertmanager_port }}
+  --web.listen-address={{ monitoring_server_addr }}:{{ alertmanager_port }}
 {% if container_binary == 'podman' %}
 ExecStop=/usr/bin/sh -c "/usr/bin/{{ container_binary }} rm -f `cat /%t/%n-cid`"
 {% else %}
