--- a/roles/ceph-prometheus/templates/prometheus.service.j2
+++ b/roles/ceph-prometheus/templates/prometheus.service.j2
@@ -35,7 +35,7 @@ ExecStart=/usr/bin/{{ container_binary }} run --rm --name=prometheus \
   --storage.tsdb.retention.time={{ prometheus_storage_tsdb_retention_time }} \
 {% endif %}
   --web.external-url=http://{{ ansible_facts['fqdn'] }}:{{ prometheus_port }}/ \
-  --web.listen-address={{ grafana_server_addr }}:{{ prometheus_port }}
+  --web.listen-address={{ monitoring_server_addr }}:{{ prometheus_port }}
 {% if container_binary == 'podman' %}
 ExecStop=/usr/bin/sh -c "/usr/bin/{{ container_binary }} rm -f `cat /%t/%n-cid`"
 {% else %}
