--- a/roles/ceph-nfs/templates/ganesha.conf.j2
+++ b/roles/ceph-nfs/templates/ganesha.conf.j2
@@ -94,8 +94,8 @@ EXPORT
 	FSAL {
 		Name = RGW;
 		User_Id = "{{ ceph_nfs_rgw_user }}";
-		Access_Key_Id ="{{ ceph_nfs_rgw_access_key }}";
-		Secret_Access_Key = "{{ ceph_nfs_rgw_secret_key }}";
+		Access_Key_Id ="{{ ceph_nfs_rgw_access_key | default('access_key') }}";
+		Secret_Access_Key = "{{ ceph_nfs_rgw_secret_key | default('secret_key') }}";
 	}
 
         {{ ganesha_rgw_export_overrides | default(None) }}
