--- a/roles/ceph-nfs/templates/ganesha.conf.j2
+++ b/roles/ceph-nfs/templates/ganesha.conf.j2
@@ -68,7 +68,7 @@ EXPORT
 		Name = CEPH;
 		User_Id = "{{ ceph_nfs_ceph_user }}";
 	}
-
+		{{ foobar }}
         {{ ganesha_ceph_export_overrides | default(None) }}
 }
 {% endif %}
