alertmanager: remove warning about untrusted certs
When using self-signed/untrusted CA certificates, alertmanager displays
an error in logs. With this commit this should make those messages
disappear.

Closes: https://bugzilla.redhat.com/show_bug.cgi?id=1936299

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/roles/ceph-prometheus/templates/alertmanager.service.j2
+++ b/roles/ceph-prometheus/templates/alertmanager.service.j2
@@ -23,6 +23,9 @@ ExecStart=/usr/bin/{{ container_binary }} run --rm --name=alertmanager \
 {% endif %}
   -v "{{ alertmanager_conf_dir }}:/etc/alertmanager:Z" \
   -v "{{ alertmanager_data_dir }}:/alertmanager:Z" \
+{% if dashboard_protocol == 'https' %}
+  -v "/etc/ceph/ceph-dashboard.crt:/etc/ssl/certs/ceph-dashboard.crt:Z" \
+{% endif %}
   --net=host \
   --cpu-period={{ alertmanager_container_cpu_period }} \
   --cpu-quota={{ alertmanager_container_cpu_period * alertmanager_container_cpu_cores }} \
