--- a/roles/ceph-crash/templates/ceph-crash.service.j2
+++ b/roles/ceph-crash/templates/ceph-crash.service.j2
@@ -20,7 +20,10 @@ ExecStart=/usr/bin/{{ container_binary }} run --rm --name ceph-crash-%i \
 {% endif %}
 --pids-limit={{ 0 if container_binary == 'podman' else -1 }} \
 --net=host \
--v /var/lib/ceph:/var/lib/ceph:z \
+{% if cluster != 'ceph' %}
+-e CEPH_ARGS="--cluster {{ cluster }}" \
+{% endif %}
+-v /var/lib/ceph/crash:/var/lib/ceph/crash:z \
 -v /etc/localtime:/etc/localtime:ro \
 -v /etc/ceph:/etc/ceph:z \
 --entrypoint=/usr/bin/ceph-crash {{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}
