--- a/roles/ceph-config/templates/ceph.conf.j2
+++ b/roles/ceph-config/templates/ceph.conf.j2
@@ -13,11 +13,11 @@ auth client required = none
 
 fsid = {{ fsid }}
 mon host = {% if nb_mon > 0 %}
-{% for host in _monitor_addresses -%}
+{% for name, addr in _monitor_addresses.items() -%}
 {% if mon_host_v1.enabled | bool %}
-{% set _v1 = ',v1:' + host.addr + mon_host_v1.suffix %}
+{% set _v1 = ',v1:' + addr + mon_host_v1.suffix %}
 {% endif %}
-[{{ "v2:" + host.addr + mon_host_v2.suffix }}{{ _v1 | default('') }}]
+[{{ "v2:" + addr + mon_host_v2.suffix }}{{ _v1 | default('') }}]
 {%- if not loop.last -%},{%- endif %}
 {%- endfor %}
 {% elif nb_mon == 0 %}
