refactor: remove multisite leftovers
Signed-off-by: Seena Fallah <seenafallah@gmail.com>

--- a/roles/ceph-handler/templates/restart_rgw_daemon.sh.j2
+++ b/roles/ceph-handler/templates/restart_rgw_daemon.sh.j2
@@ -76,7 +76,7 @@ for ((i=0; i<${RGW_NUMS}; i++)); do
   # First, restart the daemon
 
   # Check if systemd unit exists
-  # This is needed for new instances are the restart might trigger before the deployment
+  # This is needed for new instances as the restart might trigger before the deployment
   if systemctl list-units --full --all | grep -q "ceph-radosgw@rgw.${HOST_NAME}.${INSTANCES_NAME[i]}"; then
     systemctl restart ceph-radosgw@rgw.${HOST_NAME}.${INSTANCES_NAME[i]}
   else
