--- a/roles/ceph-osd/templates/systemd-run.j2
+++ b/roles/ceph-osd/templates/systemd-run.j2
@@ -43,26 +43,16 @@ numactl \
 {% if ceph_osd_docker_cpuset_mems is defined -%}
 --cpuset-mems='{{ ceph_osd_docker_cpuset_mems }}' \
 {% endif -%}
-{% for v in ceph_common_container_params['volumes'] %}
+{% for v in ceph_common_container_params['volumes'] + ceph_osd_container_params['volumes'] | default([]) %}
   -v {{ v }} \
 {% endfor %}
--v /dev:/dev \
--v /var/lib/ceph/bootstrap-osd/ceph.keyring:/var/lib/ceph/bootstrap-osd/ceph.keyring:z \
--v /var/lib/ceph/osd/{{ cluster }}-"${OSD_ID}":/var/lib/ceph/osd/{{ cluster }}-"${OSD_ID}":z \
--v /var/run/udev/:/var/run/udev/ \
 {% if ansible_facts['distribution'] == 'Ubuntu' -%}
---security-opt apparmor:unconfined \
+--security-opt apparmor=unconfined \
 {% endif -%}
-{% for k, v in ceph_common_container_params['envs'].items() %}
+{% for k, v in (ceph_common_container_params['envs'] | combine(ceph_osd_container_params['envs'] | default({}))).items() %}
 -e {{ k }}={{ v }} \
 {% endfor %}
--v /run/lvm/:/run/lvm/ \
--e OSD_ID=${OSD_ID} \
 --name=ceph-osd-${OSD_ID} \
 --entrypoint=/usr/bin/ceph-osd \
-{{ ceph_osd_docker_extra_env }} \
 {{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }} \
-{% for arg in ceph_common_container_params['args'] %}
-  {{ arg }} \
-{% endfor %}
--f -i ${OSD_ID}
+{{ (ceph_common_container_params['args'] + ceph_osd_container_params['args'] | default([])) | join(' ') }}
