ceph_default: Use vars cluster, setuser and setgroup for all daemons
Allow all daemons drop privilege themselves, except ceph-exporter

--- a/roles/ceph-exporter/templates/ceph-exporter.service.j2
+++ b/roles/ceph-exporter/templates/ceph-exporter.service.j2
@@ -28,7 +28,7 @@ ExecStart=/usr/bin/{{ container_binary }} run --rm --name ceph-exporter-%i \
   -e {{ k }}={{ v }} \
 {% endfor %}
 --entrypoint=/usr/bin/ceph-exporter {{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }} \
-  {{ (ceph_common_container_params['args'] + ceph_exporter_container_params['args'] | default([])) | join(' ') }}
+  {{ (ceph_exporter_container_params['args'] | default([])) | join(' ') }}
 {% if container_binary == 'podman' %}
 ExecStop=-/usr/bin/sh -c "/usr/bin/{{ container_binary }} rm -f `cat /%t/%n-cid`"
 {% else %}
