ceph-infra: allow configuring logrotate
Signed-off-by: Seena Fallah <seenafallah@gmail.com>
(cherry picked from commit 7d668c1795ee4edd27175f7d2cbbd9e50695e867)

--- a/roles/ceph-infra/templates/logrotate.conf.j2
+++ b/roles/ceph-infra/templates/logrotate.conf.j2
@@ -1,6 +1,6 @@
 /var/log/ceph/*.log {
-    rotate 7
-    daily
+    rotate {{ ceph_logrotate_rotate | default(7) }}
+    {{ ceph_logrotate_frequency | default('daily') }}
     compress
     sharedscripts
     postrotate
