ceph-infra: add copytruncate option in logrotate

--- a/roles/ceph-infra/templates/logrotate.conf.j2
+++ b/roles/ceph-infra/templates/logrotate.conf.j2
@@ -2,6 +2,7 @@
     rotate {{ ceph_logrotate_rotate | default(7) }}
     {{ ceph_logrotate_frequency | default('daily') }}
     compress
+    copytruncate
     sharedscripts
     postrotate
         killall -q -1 ceph-mon ceph-mgr ceph-mds ceph-osd ceph-fuse radosgw rbd-mirror || pkill -1 -x "ceph-mon|ceph-mgr|ceph-mds|ceph-osd|ceph-fuse|radosgw|rbd-mirror" || true
